--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-13 20:53+0800\n"
+"POT-Creation-Date: 2022-10-17 22:08+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -13,8 +13,14 @@ msgstr ""
 msgid "Supports Painting"
 msgstr "Support Painting"
 
+msgid "Alt + Mouse wheel"
+msgstr "Alt + Mouse wheel"
+
 msgid "Section view"
 msgstr "Section view"
+
+msgid "Ctrl + Mouse wheel"
+msgstr "Ctrl + Mouse wheel"
 
 msgid "Pen size"
 msgstr "Pen size"
@@ -34,8 +40,8 @@ msgstr "Block supports"
 msgid "Shift + Left mouse button"
 msgstr "Shift + Left mouse button"
 
-msgid "Erase painting"
-msgstr "Erase painting"
+msgid "Erase"
+msgstr "Erase"
 
 msgid "Erase all painting"
 msgstr "Erase all painting"
@@ -51,12 +57,6 @@ msgstr "Apply"
 
 msgid "Gap area"
 msgstr ""
-
-msgid "Set pen size"
-msgstr "Set pen size"
-
-msgid "Ctrl + Mouse wheel"
-msgstr "Ctrl + Mouse wheel"
 
 msgid "Tool type"
 msgstr "Tool type"
@@ -107,9 +107,6 @@ msgstr "Pen shape"
 
 msgid "Paint"
 msgstr "Paint"
-
-msgid "Erase"
-msgstr "Erase"
 
 msgid "Key 1~9"
 msgstr "Key 1~9"
@@ -238,11 +235,11 @@ msgstr "Cut"
 msgid "Movement:"
 msgstr "Movement:"
 
-msgid "Rotation:"
-msgstr "Rotation:"
+msgid "Movement"
+msgstr ""
 
-msgid "Height:"
-msgstr "Height:"
+msgid "Height"
+msgstr ""
 
 msgid "Keep upper part"
 msgstr "Keep upper part"
@@ -348,10 +345,10 @@ msgstr ""
 msgid "Block seam"
 msgstr ""
 
-msgid "Remove selection"
+msgid "Seam painting"
 msgstr ""
 
-msgid "Seam painting"
+msgid "Remove selection"
 msgstr ""
 
 msgid "Entering Seam painting"
@@ -1102,8 +1099,11 @@ msgstr "Unload"
 msgid "Tips"
 msgstr "Tips"
 
-msgid "AMS Settings"
-msgstr "AMS Settings"
+msgid "Guide"
+msgstr ""
+
+msgid "Retry"
+msgstr ""
 
 msgid "Calibrating AMS..."
 msgstr "Calibrating AMS..."
@@ -1403,6 +1403,9 @@ msgstr ""
 
 msgid "Print with the filament mounted on the back of chassis"
 msgstr ""
+
+msgid "AMS Settings"
+msgstr "AMS Settings"
 
 msgid "Insertion update"
 msgstr "Insertion update"
@@ -2684,7 +2687,7 @@ msgstr ""
 msgid "Download waiting..."
 msgstr ""
 
-msgid "Retry"
+msgid "Play"
 msgstr ""
 
 msgid "Open Folder"
@@ -2790,6 +2793,9 @@ msgstr "Sport"
 msgid "Ludicrous"
 msgstr "Ludicrous"
 
+msgid "Failed to connect to the server"
+msgstr "Failed to connect to the server"
+
 msgid "Status"
 msgstr "Status"
 
@@ -2801,9 +2807,6 @@ msgstr "Update"
 
 msgid "HMS"
 msgstr "HMS"
-
-msgid "Failed to connect to the server"
-msgstr "Failed to connect to the server"
 
 msgid "Failed to connect to the printer"
 msgstr "Failed to connect to the printer"
@@ -3113,6 +3116,11 @@ msgstr ""
 
 msgid "Restore"
 msgstr "Restore"
+
+msgid ""
+"The bed temperature exceeds filament's vitrification temperature. Please "
+"open the front door of printer before printing to avoid nozzle clog."
+msgstr ""
 
 #, c-format, boost-format
 msgid "Loading file: %s"
@@ -3728,6 +3736,9 @@ msgstr "Other Device"
 msgid "Input access code"
 msgstr "Input access code"
 
+msgid "Can't find my devices?"
+msgstr ""
+
 msgid "Log out successful."
 msgstr "Log out successful."
 
@@ -3751,6 +3762,9 @@ msgstr "Bed leveling"
 
 msgid "Flow Calibration"
 msgstr "Flow calibration"
+
+msgid "Can't connect to the printer"
+msgstr ""
 
 msgid "send completed"
 msgstr "Send complete"
@@ -3820,6 +3834,18 @@ msgid ""
 msgstr ""
 
 msgid "An SD card needs to be inserted before printing."
+msgstr ""
+
+msgid "An SD card needs to be inserted to recording timelapse"
+msgstr ""
+
+msgid "Please check the following infomation:\n"
+msgstr ""
+
+msgid ""
+"The printer type used to generate G-code is not the same type as the "
+"currently selected physical printer. It is recommend to re-slice by "
+"selecting the same printer type.\n"
 msgstr ""
 
 msgid "Preparing print job"
@@ -7009,14 +7035,24 @@ msgstr "Support: fix holes at layer %d"
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
 
-#, c-format, boost-format
+#~ msgid "Erase painting"
+#~ msgstr "Erase painting"
+
+#~ msgid "Set pen size"
+#~ msgstr "Set pen size"
+
+#~ msgid "Rotation:"
+#~ msgstr "Rotation:"
+
+#~ msgid "Height:"
+#~ msgstr "Height:"
+
 #~ msgid "Initialize failed [%d]!"
 #~ msgstr "Initalization failed [%d]!"
 
 #~ msgid "Send print job to"
 #~ msgstr "Send print job to"
 
-#, boost-format
 #~ msgid ""
 #~ "%1% is too close to exclusion area, there will be collisions when "
 #~ "printing."
@@ -7024,7 +7060,6 @@ msgstr "Support: propagate branches at layer %d"
 #~ "%1% is too close to an exclusion area; there will be collisions when "
 #~ "printing."
 
-#, boost-format
 #~ msgid ""
 #~ "\n"
 #~ "%1% is too close to exclusion area, there will be collisions when "
@@ -7070,7 +7105,6 @@ msgstr "Support: propagate branches at layer %d"
 #~ "Clearance radius around extruder: used as input for auto-arranging to "
 #~ "avoid collisions when printing object by object"
 
-#, boost-format
 #~ msgid "Error at line %1%:\n"
 #~ msgstr "Error at line %1%:\n"
 
@@ -7200,9 +7234,6 @@ msgstr "Support: propagate branches at layer %d"
 
 #~ msgid "Spiral mode"
 #~ msgstr "Spiral mode"
-
-#~ msgid "Alt + Mouse wheel"
-#~ msgstr "Alt + Mouse wheel"
 
 #~ msgid ""
 #~ "An object is layed over the boundary of plate.\n"
