--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -2179,13 +2179,13 @@ msgstr ""
 "查看，如下图所示："
 
 msgid "Invalid input."
-msgstr ""
+msgstr "非法输入"
 
 msgid "New Window"
-msgstr ""
+msgstr "新窗口"
 
 msgid "Open a new window"
-msgstr ""
+msgstr "打开新窗口"
 
 msgid "Application is closing"
 msgstr "正在关闭应用程序"
@@ -2546,7 +2546,7 @@ msgid "Initialize failed (No Device)!"
 msgstr "初始化失败（没有设备）！"
 
 msgid "Initialize failed (No Camera Device)!"
-msgstr ""
+msgstr "初始化失败（没有摄像头）"
 
 msgid "Initializing..."
 msgstr "正在初始化……"
@@ -2555,17 +2555,17 @@ msgid "Loading..."
 msgstr "正在加载视频……"
 
 msgid "Initialize failed (Not supported with LAN-only mode)!"
-msgstr ""
+msgstr "初始化失败（不支持局域网模式的视频连接）"
 
 msgid "Initialize failed (Not accessible in LAN-only mode)!"
-msgstr ""
+msgstr "初始化失败（局域网描述不可访问）"
 
 msgid "Initialize failed (Not supported without remote video tunnel)!"
-msgstr ""
+msgstr "初始化失败（不支持远程视频连接）"
 
 #, c-format, boost-format
 msgid "Initialize failed (%s)!"
-msgstr ""
+msgstr "初始化失败（%s）!"
 
 msgid "Network unreachable"
 msgstr "网络不可访问"
@@ -2590,43 +2590,43 @@ msgid "All Files"
 msgstr "所有文件"
 
 msgid "Group files by year, recent first."
-msgstr ""
+msgstr "按年份分组，从最近的开始展示"
 
 msgid "Group files by month, recent first."
-msgstr ""
+msgstr "按月份分组，从最近的开始展示"
 
 msgid "Show all files, recent first."
-msgstr ""
+msgstr "显示所有文件，从最近的开始展示"
 
 msgid "Switch to timelapse files."
-msgstr ""
+msgstr "切换到延时摄影文件列表"
 
 msgid "Video"
 msgstr "录像"
 
 msgid "Switch to video files."
-msgstr ""
+msgstr "切换到视频文件列表"
 
 msgid "Delete selected files from printer."
-msgstr ""
+msgstr "从打印机中输出选中的文件"
 
 msgid "Download"
 msgstr "下载"
 
 msgid "Download selected files from printer."
-msgstr ""
+msgstr "从打印机中下载选择的文件"
 
 msgid "Select"
-msgstr ""
+msgstr "选择"
 
 msgid "Batch manage files."
-msgstr ""
+msgstr "批量管理文件"
 
 msgid "No printers."
 msgstr "未选择打印机"
 
 msgid "Not supported."
-msgstr ""
+msgstr "不支持"
 
 msgid "Connecting..."
 msgstr "连接中..."
@@ -2645,10 +2645,10 @@ msgid "Download waiting..."
 msgstr "正在下载中..."
 
 msgid "Play"
-msgstr ""
+msgstr "播放"
 
 msgid "Open Folder"
-msgstr ""
+msgstr "打开目录"
 
 msgid "Download finished"
 msgstr "下载完成"
@@ -3018,31 +3018,31 @@ msgid "Flushing volumes"
 msgstr "冲刷体积"
 
 msgid "Add one filament"
-msgstr ""
+msgstr "增加一个材料"
 
 msgid "Remove last filament"
-msgstr ""
+msgstr "删除最后一个材料"
 
 msgid "Sync material list from AMS"
-msgstr ""
+msgstr "同步到 AMS 的材料列表"
 
 msgid "Set filaments to use"
-msgstr ""
+msgstr "配置可选择的材料"
 
 msgid ""
 "No AMS filaments. Please select a printer in 'Device' page to load AMS info."
-msgstr ""
+msgstr "没有发现AMS材料。请在“设备”页面选择打印机，将加载 AMS 信息"
 
 msgid "Sync filaments with AMS"
-msgstr ""
+msgstr "同步到 AMS 的材料列表"
 
 msgid ""
 "Sync filaments with AMS will drop all current selected filament presets and "
 "colors. Do you want to continue?"
-msgstr ""
+msgstr "同步到 AMS 的材料列表将丢弃所有当前配置的材料预设、颜色。是否继续？"
 
 msgid "There are no compatible filaments, and sync is not performed."
-msgstr ""
+msgstr "没有如任何兼容的材料，同步操作未执行。"
 
 msgid "Untitled"
 msgstr "未命名"
